Progress on converting inflammation to climate

--- a/_episodes/01a.01-numpy.md
+++ b/_episodes/01a.01-numpy.md
@@ -36,7 +36,7 @@ while a lot of powerful, general tools are built into languages like Python,
 specialized tools built up from these basic units live in [libraries]({{ page.root }}/reference/#library)
 that can be called upon when needed.
 
-In order to load our inflammation data,
+In order to load our climate data,
 we need to access ([import]({{ page.root }}/reference/#import) in Python terminology)
 a library called [NumPy](http://docs.scipy.org/doc/numpy/ "NumPy Documentation").
 In general you should use this library if you want to do fancy things with numbers,
@@ -55,18 +55,18 @@ Once you've imported the library,
 we can ask the library to read our data file for us:
 
 ~~~
-numpy.loadtxt(fname='inflammation-01.csv', delimiter=',')
+numpy.loadtxt(fname='01.temperature.csv', delimiter=',')
 ~~~
 {: .python}
 
 ~~~
-array([[ 0.,  0.,  1., ...,  3.,  0.,  0.],
-       [ 0.,  1.,  2., ...,  1.,  0.,  1.],
-       [ 0.,  1.,  1., ...,  2.,  1.,  1.],
-       ...,
-       [ 0.,  1.,  1., ...,  1.,  1.,  1.],
-       [ 0.,  0.,  0., ...,  0.,  2.,  0.],
-       [ 0.,  0.,  1., ...,  1.,  1.,  0.]])
+[[ 267.33  273.86  280.14 ...,  282.75  280.94  274.93]
+ [ 276.93  276.79  277.91 ...,  287.66  278.27  275.46]
+ [ 279.22  274.24  275.67 ...,  286.49  276.57  270.7 ]
+ ...,
+ [ 268.08  271.09  274.99 ...,  284.9   276.52  275.94]
+ [ 270.69  267.18  276.62 ...,  284.8   281.92  280.42]
+ [ 270.95  274.19  281.88 ...,  286.8   280.65  274.79]]
 ~~~
 {: .output}
 
@@ -219,7 +219,7 @@ Just as we can assign a single value to a variable, we can also assign an array 
 to a variable using the same syntax.  Let's re-run `numpy.loadtxt` and save its result:
 
 ~~~
-data = numpy.loadtxt(fname='inflammation-01.csv', delimiter=',')
+data = numpy.loadtxt(fname='01.temperature.csv', delimiter=',')
 ~~~
 {: .python}
 
@@ -233,13 +233,13 @@ print(data)
 {: .python}
 
 ~~~
-[[ 0.  0.  1. ...,  3.  0.  0.]
- [ 0.  1.  2. ...,  1.  0.  1.]
- [ 0.  1.  1. ...,  2.  1.  1.]
+[[ 267.33  273.86  280.14 ...,  282.75  280.94  274.93]
+ [ 276.93  276.79  277.91 ...,  287.66  278.27  275.46]
+ [ 279.22  274.24  275.67 ...,  286.49  276.57  270.7 ]
  ...,
- [ 0.  1.  1. ...,  1.  1.  1.]
- [ 0.  0.  0. ...,  0.  2.  0.]
- [ 0.  0.  1. ...,  1.  1.  0.]]
+ [ 268.08  271.09  274.99 ...,  284.9   276.52  275.94]
+ [ 270.69  267.18  276.62 ...,  284.8   281.92  280.42]
+ [ 270.95  274.19  281.88 ...,  286.8   280.65  274.79]]
 ~~~
 {: .output}
 
@@ -260,9 +260,8 @@ print(type(data))
 
 The output tells us that `data` currently refers to
 an N-dimensional array created by the NumPy library.
-These data correspond to arthritis patients' inflammation.
-The rows are the individual patients and the columns
-are their daily inflammation measurements.
+These data correspond to air temperature values (BONUS: why do you think the values are so large?).
+The rows are years and the columns are months in the year.
 
 > ## Data Type
 >
@@ -294,12 +293,12 @@ print(data.shape)
 {: .python}
 
 ~~~
-(60, 40)
+(69, 12)
 ~~~
 {: .output}
 
-This tells us that `data` has 60 rows and 40 columns. When we created the
-variable `data` to store our arthritis data, we didn't just create the array, we also
+This tells us that `data` has 69 rows and 12 columns. When we created the
+variable `data` to store our air temperature data, we didn't just create the array, we also
 created information about the array, called [members]({{ page.root }}/reference/#member) or
 attributes. This extra information describes `data` in
 the same way an adjective describes a noun.
@@ -318,22 +317,22 @@ print('first value in data:', data[0, 0])
 {: .python}
 
 ~~~
-first value in data: 0.0
+first value in data: 267.33
 ~~~
 {: .output}
 
 ~~~
-print('middle value in data:', data[30, 20])
+print('middle value in data:', data[34, 6])
 ~~~
 {: .python}
 
 ~~~
-middle value in data: 13.0
+middle value in data: 295.48
 ~~~
 {: .output}
 
-The expression `data[30, 20]` may not surprise you,
-but `data[0, 0]` might.
+The expression `data[34, 6]` may not surprise you, but the expression
+`data[0, 0]` might.
 Programming languages like Fortran and MATLAB start counting at 1,
 because that's what human beings have done for thousands of years.
 Languages in the C family (including C++, Java, Perl, and Python) count from 0
@@ -361,44 +360,50 @@ the index is how many steps we have to take from the start to get the item we wa
 > which can be confusing when plotting data.
 {: .callout}
 
-An index like `[30, 20]` selects a single element of an array,
+An index like `[34, 6]` selects a single element of an array,
 but we can select whole sections as well.
 For example,
-we can select the first ten days (columns) of values
-for the first four patients (rows) like this:
+we can select January and March air temperature (first three columns)
+for the first 10 years (rows) like this:
 
 ~~~
-print(data[0:4, 0:10])
+print(data[0:10, 0:3])
 ~~~
 {: .python}
 
 ~~~
-[[ 0.  0.  1.  3.  1.  2.  4.  7.  8.  3.]
- [ 0.  1.  2.  1.  2.  1.  3.  2.  2.  6.]
- [ 0.  1.  1.  3.  3.  2.  6.  2.  5.  9.]
- [ 0.  0.  2.  0.  4.  2.  2.  1.  6.  7.]]
+[[ 267.33  273.86  280.14]
+ [ 276.93  276.79  277.91]
+ [ 279.22  274.24  275.67]
+ ...,
+ [ 270.78  273.27  278.63]
+ [ 270.42  275.28  276.7 ]
+ [ 270.12  275.77  277.41]]
 ~~~
 {: .output}
 
-The [slice]({{ page.root }}/reference/#slice) `0:4` means,
-"Start at index 0 and go up to, but not including, index 4."
+The [slice]({{ page.root }}/reference/#slice) `0:10` means,
+"Start at index 0 and go up to, but not including, index 10."
 Again,
 the up-to-but-not-including takes a bit of getting used to,
 but the rule is that the difference between the upper and lower bounds is the number of values in the slice.
 
-We don't have to start slices at 0:
+We don't have to start slices at `0:`.
+For example, to select summer (June - August) air temperatures for the first 10 years...(recall that June is month 6, but Python indexing starts at 0, so it is column 5. August is month 8 or index 7, but to go _through_ August, we go _up to_ September -- month 9, index 8).
 
 ~~~
-print(data[5:10, 0:10])
+print(data[0:10, 5:8])
 ~~~
 {: .python}
 
 ~~~
-[[ 0.  0.  1.  2.  2.  4.  2.  1.  6.  4.]
- [ 0.  0.  2.  2.  4.  2.  2.  5.  5.  8.]
- [ 0.  0.  1.  2.  3.  1.  2.  3.  5.  3.]
- [ 0.  0.  0.  3.  1.  5.  6.  5.  5.  8.]
- [ 0.  1.  1.  2.  1.  3.  5.  3.  5.  8.]]
+[[ 293.16  295.16  294.25]
+ [ 294.65  297.23  294.97]
+ [ 292.58  293.75  293.66]
+ ...,
+ [ 290.53  297.06  296.12]
+ [ 292.46  294.18  293.62]
+ [ 294.23  294.76  293.41]]
 ~~~
 {: .output}
 
@@ -412,7 +417,7 @@ and if we don't include either
 the slice includes everything:
 
 ~~~
-small = data[:3, 36:]
+small = data[:3,5:8]
 print('small is:')
 print(small)
 ~~~
@@ -420,9 +425,9 @@ print(small)
 
 ~~~
 small is:
-[[ 2.  3.  0.  0.]
- [ 1.  1.  0.  1.]
- [ 2.  2.  1.  1.]]
+[[ 293.16  295.16  294.25]
+ [ 294.65  297.23  294.97]
+ [ 292.58  293.75  293.66]]
 ~~~
 {: .output}
 
@@ -443,21 +448,21 @@ whose elements have the value of two times the value of the corresponding elemen
 
 ~~~
 print('original:')
-print(data[:3, 36:])
+print(data[:3, 5:8])
 print('doubledata:')
-print(doubledata[:3, 36:])
+print(doubledata[:3, 5:8])
 ~~~
 {: .python}
 
 ~~~
 original:
-[[ 2.  3.  0.  0.]
- [ 1.  1.  0.  1.]
- [ 2.  2.  1.  1.]]
+[[ 293.16  295.16  294.25]
+ [ 294.65  297.23  294.97]
+ [ 292.58  293.75  293.66]]
 doubledata:
-[[ 4.  6.  0.  0.]
- [ 2.  2.  0.  2.]
- [ 4.  4.  2.  2.]]
+[[ 586.32  590.32  588.5 ]
+ [ 589.3   594.46  589.94]
+ [ 585.16  587.5   587.32]]
 ~~~
 {: .output}
 
@@ -477,21 +482,24 @@ and so on for all other elements of the arrays.
 
 ~~~
 print('tripledata:')
-print(tripledata[:3, 36:])
+print(tripledata[:3, 5:8])
 ~~~
 {: .python}
 
 ~~~
 tripledata:
-[[ 6.  9.  0.  0.]
- [ 3.  3.  0.  3.]
- [ 6.  6.  3.  3.]]
+[[ 879.48  885.48  882.75]
+ [ 883.95  891.69  884.91]
+ [ 877.74  881.25  880.98]]
 ~~~
 {: .output}
 
+As an exercise, how could you quickly convert these values from Kelvin to Celsius?
+What about to Fahrenheit?
+
 Often, we want to do more than add, subtract, multiply, and divide values of data.
 NumPy knows how to do more complex operations on arrays.
-If we want to find the average inflammation for all patients on all days,
+If we want to find the average air temperature over this entire data set,
 for example,
 we can ask NumPy to compute `data`'s mean value:
 
@@ -501,7 +509,7 @@ print(numpy.mean(data))
 {: .python}
 
 ~~~
-6.14875
+283.815870048
 ~~~
 {: .output}
 
@@ -541,16 +549,16 @@ a convenient Python feature that will enable us to do this all in one line.
 ~~~
 maxval, minval, stdval = numpy.max(data), numpy.min(data), numpy.std(data)
 
-print('maximum inflammation:', maxval)
-print('minimum inflammation:', minval)
+print('maximum temperature:', maxval)
+print('minimum temperature:', minval)
 print('standard deviation:', stdval)
 ~~~
 {: .python}
 
 ~~~
-maximum inflammation: 20.0
-minimum inflammation: 0.0
-standard deviation: 4.61383319712
+maximum temperature: 297.3
+minimum temperature: 263.94
+standard deviation: 8.47084434071
 ~~~
 {: .output}
 
@@ -567,19 +575,19 @@ standard deviation: 4.61383319712
 
 When analyzing data, though,
 we often want to look at partial statistics,
-such as the maximum value per patient
-or the average value per day.
+such as the maximum value per year
+or the monthly climatology (average of a month across all years).
 One way to do this is to create a new temporary array of the data we want,
 then ask it to do the calculation:
 
 ~~~
-patient_0 = data[0, :] # 0 on the first axis, everything on the second
-print('maximum inflammation for patient 0:', patient_0.max())
+year_0 = data[0, :] # 0 on the first axis, everything on the second
+print('maximum temperature for year 0:', year_0.max())
 ~~~
 {: .python}
 
 ~~~
-maximum inflammation for patient 0: 18.0
+maximum temperature for year 0: 295.16
 ~~~
 {: .output}
 
@@ -592,12 +600,12 @@ We don't actually need to store the row in a variable of its own.
 Instead, we can combine the selection and the function call:
 
 ~~~
-print('maximum inflammation for patient 2:', numpy.max(data[2, :]))
+print('maximum temperature for year 2:', numpy.max(data[2, :]))
 ~~~
 {: .python}
 
 ~~~
-maximum inflammation for patient 2: 19.0
+maximum temperature for year 2: 293.75
 ~~~
 {: .output}
 
