Finish converting inflammation to temperature

--- a/_episodes/01a.01-numpy.md
+++ b/_episodes/01a.01-numpy.md
@@ -609,8 +609,8 @@ maximum temperature for year 2: 293.75
 ~~~
 {: .output}
 
-What if we need the maximum inflammation for each patient over all days (as in the
-next diagram on the left), or the average for each day (as in the
+What if we need the maximum temperature for each year over all months (as in the
+next diagram on the left), or the monthly climatology (as in the
 diagram on the right)? As the diagram below shows, we want to perform the
 operation across an axis:
 
@@ -627,14 +627,9 @@ print(numpy.mean(data, axis=0))
 {: .python}
 
 ~~~
-[  0.           0.45         1.11666667   1.75         2.43333333   3.15
-   3.8          3.88333333   5.23333333   5.51666667   5.95         5.9
-   8.35         7.73333333   8.36666667   9.5          9.58333333
-  10.63333333  11.56666667  12.35        13.25        11.96666667
-  11.03333333  10.16666667  10.           8.66666667   9.15         7.25
-   7.33333333   6.58333333   6.06666667   5.95         5.11666667   3.6
-   3.3          3.56666667   2.48333333   1.5          1.13333333
-   0.56666667]
+[ 271.72333333  273.01289855  277.85550725  283.60347826  288.58217391
+  293.0113087   295.15942029  294.50565362  290.8284058   284.57637681
+  278.93942029  273.99246377]
 ~~~
 {: .output}
 
@@ -647,12 +642,12 @@ print(numpy.mean(data, axis=0).shape)
 {: .python}
 
 ~~~
-(40,)
+(12,)
 ~~~
 {: .output}
 
-The expression `(40,)` tells us we have an N×1 vector,
-so this is the average inflammation per day for all patients.
+The expression `(12,)` tells us we have an N×1 vector,
+so this is the monthly climatology (average of each month over all years).
 If we average across axis 1 (columns in our 2D example), we get:
 
 ~~~
@@ -661,16 +656,12 @@ print(numpy.mean(data, axis=1))
 {: .python}
 
 ~~~
-[ 5.45   5.425  6.1    5.9    5.55   6.225  5.975  6.65   6.625  6.525
-  6.775  5.8    6.225  5.75   5.225  6.3    6.55   5.7    5.85   6.55
-  5.775  5.825  6.175  6.1    5.8    6.425  6.05   6.025  6.175  6.55
-  6.175  6.35   6.725  6.125  7.075  5.725  5.925  6.15   6.075  5.75
-  5.975  5.725  6.3    5.9    6.75   5.925  7.225  6.15   5.95   6.275  5.7
-  6.1    6.825  5.975  6.725  5.7    6.25   6.4    7.05   5.9  ]
+[ 283.9         284.98833333  283.60583333 ...,  283.0275      284.45916667
+  285.22416667]
 ~~~
 {: .output}
 
-which is the average inflammation per patient across all days.
+which is the mean annual temperature for each year.
 
 The mathematician Richard Hamming once said,
 "The purpose of computing is insight, not numbers,"
@@ -694,7 +685,7 @@ matplotlib.pyplot.show()
 
 Blue regions in this heat map are low values, while red shows high values.
 As we can see,
-inflammation rises and falls over a 40-day period.
+temperature rises in the summer months and decreases in the winter months.
 
 > ## Some IPython Magic
 >
@@ -713,24 +704,22 @@ inflammation rises and falls over a 40-day period.
 > Note that you only have to execute this function once per notebook.
 {: .callout}
 
-Let's take a look at the average inflammation over time:
+Let's take a look at the monthly climatology:
 
 ~~~
-ave_inflammation = numpy.mean(data, axis=0)
-ave_plot = matplotlib.pyplot.plot(ave_inflammation)
+climatology = numpy.mean(data, axis=0)
+ave_plot = matplotlib.pyplot.plot(climatology)
 matplotlib.pyplot.show()
 ~~~
 {: .python}
 
-![Average Inflammation Over Time](../fig/01-numpy_73_0.png)
+![Monthly climatology](../fig/01-numpy_73_0.png)
 
 Here,
-we have put the average per day across all patients in the variable `ave_inflammation`,
+we have put the average per month across all years in the variable `climatology`,
 then asked `matplotlib.pyplot` to create and display a line graph of those values.
-The result is roughly a linear rise and fall,
-which is suspicious:
-based on other studies,
-we expect a sharper rise and slower fall.
+The result is the expected seasonal progression of values.
+
 Let's have a look at two other statistics:
 
 ~~~
@@ -749,14 +738,6 @@ matplotlib.pyplot.show()
 
 ![Minimum Value Along The First Axis](../fig/01-numpy_75_3.png)
 
-The maximum value rises and falls perfectly smoothly,
-while the minimum seems to be a step function.
-Neither result seems particularly likely,
-so either there's a mistake in our calculations
-or something is wrong with our data.
-This insight would have been difficult to reach by
-examining the data without visualization tools.
-
 You can group similar plots in a single figure using subplots.
 This script below uses a number of new commands. The function `matplotlib.pyplot.figure()`
 creates a space into which we will place all of our plots. The parameter `figsize`
@@ -773,7 +754,7 @@ Here are our three plots side by side:
 import numpy
 import matplotlib.pyplot
 
-data = numpy.loadtxt(fname='inflammation-01.csv', delimiter=',')
+data = numpy.loadtxt(fname='01.temperature.csv', delimiter=',')
 
 fig = matplotlib.pyplot.figure(figsize=(10.0, 3.0))
 
@@ -963,7 +944,7 @@ the graphs will actually be squeezed together more closely.)
 > ## Drawing Straight Lines
 >
 > In the center and right subplots above, we  expect all lines to look like step functions, because
-> non-integer value are not realistic for the minimum and maximum values. However, you can see
+> we only have monthly, not daily (or sub-daily), data. However, you can see
 > that the lines are not always vertical or horizontal, and in particular the step function
 > in the subplot on the right looks slanted. Why is this?
 >
@@ -1146,9 +1127,9 @@ the graphs will actually be squeezed together more closely.)
 
 >## Change In Inflamation
 >
->This patient data is _longitudinal_ in the sense that each row represents a
->series of observations relating to one individual. This means that change
->inflamation is a meaningful concept.
+>This temperature data is _longitudinal_ in the sense that each row represents a
+>series of observations relating to one year. This means that change
+>in temperature is a meaningful concept.
 >
 >The `numpy.diff()` function takes a NumPy array and returns the 
 >difference along a specified axis.
@@ -1156,12 +1137,11 @@ the graphs will actually be squeezed together more closely.)
 >Which axis would it make sense to use this function along?
 >
 > > ## Solution
-> > Since the row axis (0) is patients, it does not make sense to get the
-> > difference between two arbitrary patients. The column axis (1) is in
-> > days, so the differnce is the change in inflamation -- a meaningful
-> > concept.
+> > Trick question! This function would make sense for either axis.
+> > Across the row axis (0), you can assess when each month was colder or warmer than the previous.
 > >
 > > ~~~
+> > numpy.diff(data, axis=0)
 > > numpy.diff(data, axis=1)
 > > ~~~
 > > {: .python}
@@ -1176,12 +1156,12 @@ the graphs will actually be squeezed together more closely.)
 > > columns than there are columns in the data.
 > {: .solution}
 >
->How would you find the largest change in inflammation for each patient? Does
->it matter if the change in inflammation is an increase or a decrease?
+>How would you find the largest change in temperature for each year? Does
+>it matter if the change in temperature is an increase or a decrease?
 >
 > > ## Solution
 > > By using the `numpy.max()` function after you apply the `numpy.diff()`
-> > function, you will get the largest difference between days.
+> > function, you will get the largest difference between months.
 > >
 > > ~~~
 > > numpy.max(numpy.diff(data, axis=1), axis=1)
@@ -1189,12 +1169,7 @@ the graphs will actually be squeezed together more closely.)
 > > {: .python}
 > >
 > > ~~~
-> > array([  7.,  12.,  11.,  10.,  11.,  13.,  10.,   8.,  10.,  10.,   7.,
-> >          7.,  13.,   7.,  10.,  10.,   8.,  10.,   9.,  10.,  13.,   7.,
-> >         12.,   9.,  12.,  11.,  10.,  10.,   7.,  10.,  11.,  10.,   8.,
-> >         11.,  12.,  10.,   9.,  10.,  13.,  10.,   7.,   7.,  10.,  13.,
-> >         12.,   8.,   8.,  10.,  10.,   9.,   8.,  13.,  10.,   7.,  10.,
-> >          8.,  12.,  10.,   7.,  12.])
+> > array([ 6.53,  6.8 ,  7.89, ...,  9.08,  9.44,  7.69])
 > > ~~~
 > > {: .python}
 > >
@@ -1203,7 +1178,7 @@ the graphs will actually be squeezed together more closely.)
 > > direction, the `numpy.absolute()` function will provide that.
 > >
 > > Notice the difference if you get the largest _absolute_ difference
-> > between readings.
+> > between values.
 > >
 > > ~~~
 > > numpy.max(numpy.absolute(numpy.diff(data, axis=1)), axis=1)
@@ -1211,12 +1186,7 @@ the graphs will actually be squeezed together more closely.)
 > > {: .python}
 > >
 > > ~~~
-> > array([ 12.,  14.,  11.,  13.,  11.,  13.,  10.,  12.,  10.,  10.,  10.,
-> >         12.,  13.,  10.,  11.,  10.,  12.,  13.,   9.,  10.,  13.,   9.,
-> >         12.,   9.,  12.,  11.,  10.,  13.,   9.,  13.,  11.,  11.,   8.,
-> >         11.,  12.,  13.,   9.,  10.,  13.,  11.,  11.,  13.,  11.,  13.,
-> >         13.,  10.,   9.,  10.,  10.,   9.,   9.,  13.,  10.,   9.,  10.,
-> >         11.,  13.,  10.,  10.,  12.])
+> > array([ 7.99,  9.39,  9.92, ...,  9.08,  9.44,  7.69])
 > > ~~~
 > > {: .python}
 > >
