--- a/_episodes/01a.02-loop.md
+++ b/_episodes/01a.02-loop.md
@@ -16,10 +16,9 @@ keypoints:
 ---
 
 In the last lesson,
-we wrote some code that plots some values of interest from our first inflammation dataset,
-and reveals some suspicious features in it, such as from `inflammation-01.csv`
+we wrote some code that plots some values of interest from our first temperature dataset (`01.temperature.csv`).
 
-![Analysis of inflammation-01.csv](../fig/03-loop_2_0.png)
+![Analysis of 01.temperature.csv](../fig/03-loop_2_0.png)
 
 We have a dozen data sets right now, though, and more on the way.
 We want to create plots for all of our data sets with a single statement.
