Add more temperature data for loop lesson

--- a/_episodes/01a.01-numpy.md
+++ b/_episodes/01a.01-numpy.md
@@ -55,7 +55,7 @@ Once you've imported the library,
 we can ask the library to read our data file for us:
 
 ~~~
-numpy.loadtxt(fname='01.temperature.csv', delimiter=',')
+numpy.loadtxt(fname='temperature/wvu.temperature.csv', delimiter=',')
 ~~~
 {: .python}
 
@@ -219,7 +219,7 @@ Just as we can assign a single value to a variable, we can also assign an array 
 to a variable using the same syntax.  Let's re-run `numpy.loadtxt` and save its result:
 
 ~~~
-data = numpy.loadtxt(fname='01.temperature.csv', delimiter=',')
+data = numpy.loadtxt(fname='temperature/wvu.temperature.csv', delimiter=',')
 ~~~
 {: .python}
 
@@ -754,7 +754,7 @@ Here are our three plots side by side:
 import numpy
 import matplotlib.pyplot
 
-data = numpy.loadtxt(fname='01.temperature.csv', delimiter=',')
+data = numpy.loadtxt(fname='temperature/wvu.temperature.csv', delimiter=',')
 
 fig = matplotlib.pyplot.figure(figsize=(10.0, 3.0))
 
