--- a/_episodes/01a.02-loop.md
+++ b/_episodes/01a.02-loop.md
@@ -16,9 +16,9 @@ keypoints:
 ---
 
 In the last lesson,
-we wrote some code that plots some values of interest from our first temperature dataset (`01.temperature.csv`).
+we wrote some code that plots some values of interest from our first temperature dataset (`temperature/wvu.temperature.csv`).
 
-![Analysis of 01.temperature.csv](../fig/03-loop_2_0.png)
+![Analysis of temperature/wvu.temperature.csv](../fig/03-loop_2_0.png)
 
 We have a dozen data sets right now, though, and more on the way.
 We want to create plots for all of our data sets with a single statement.
