--- a/_episodes/01a.04-files.md
+++ b/_episodes/01a.04-files.md
@@ -28,12 +28,12 @@ while `?` matches any one character.
 We can use this to get the names of all the CSV files in the current directory:
 
 ~~~
-print(glob.glob('data/inflammation*.csv'))
+print(glob.glob('temperature/*.temperature.csv'))
 ~~~
 {: .python}
 
 ~~~
-['data/inflammation-05.csv', 'data/inflammation-11.csv', 'data/inflammation-12.csv', 'data/inflammation-08.csv', 'data/inflammation-03.csv', 'data/inflammation-06.csv', 'data/inflammation-09.csv', 'data/inflammation-07.csv', 'data/inflammation-10.csv', 'data/inflammation-02.csv', 'data/inflammation-04.csv', 'data/inflammation-01.csv']
+['temperature/wvu.temperature.csv', 'temperature/barrow.temperature.csv', 'temperature/key_west.temperature.csv', 'temperature/reston.temperature.csv', 'temperature/land_o_lakes.temperature.csv']
 ~~~
 {: .output}
 
@@ -42,14 +42,14 @@ As these examples show,
 This means we can loop over it
 to do something with each filename in turn.
 In our case,
-the "something" we want to do is generate a set of plots for each file in our inflammation dataset.
+the "something" we want to do is generate a set of plots for each file in our climate dataset.
 If we want to start by analyzing just the first three files in alphabetical order, we can use the `sorted` built-in function to generate a new sorted list from the `glob.glob` output:
 
 ~~~
 import numpy
 import matplotlib.pyplot
 
-filenames = sorted(glob.glob('data/inflammation*.csv'))
+filenames = sorted(glob.glob('temperature/*.temperature.csv'))
 filenames = filenames[0:3]
 for f in filenames:
     print(f)
@@ -77,31 +77,27 @@ for f in filenames:
 {: .python}
 
 ~~~
-inflammation-01.csv
+temperature/barrow.temperature.csv
 ~~~
 {: .output}
 
-![Analysis of inflammation-01.csv](../fig/03-loop_49_1.png)
+![Analysis of barrow.temperature.csv](../fig/03-loop_49_1.png)
 
 ~~~
-inflammation-02.csv
+temperature/key_west.temperature.csv
 ~~~
 {: .output}
 
-![Analysis of inflammation-02.csv](../fig/03-loop_49_3.png)
+![Analysis of key_west.temperature.csv](../fig/03-loop_49_3.png)
 
 ~~~
 inflammation-03.csv
 ~~~
 {: .output}
 
-![Analysis of inflammation-03.csv](../fig/03-loop_49_5.png)
+![Analysis of land_o_lakes.csv](../fig/03-loop_49_5.png)
 
-Sure enough,
-the maxima of the first two data sets show exactly the same ramp as the first,
-and their minima show the same staircase structure;
-a different situation has been revealed in the third dataset,
-where the maxima are a bit less regular, but the minima are consistently zero.
+All of these sites show the familiar seasonal trajectory (though if you look at the Y-axis labels, you may notice that the mean and amplitude of the seasonality varies).
 
 > ## Plotting Differences
 >
@@ -115,7 +111,7 @@ where the maxima are a bit less regular, but the minima are consistently zero.
 > > import numpy
 > > import matplotlib.pyplot
 > >
-> > filenames = glob.glob('data/inflammation*.csv')
+> > filenames = glob.glob('temperature/*.temperature.csv')
 > >
 > > data0 = numpy.loadtxt(fname=filenames[0], delimiter=',')
 > > data1 = numpy.loadtxt(fname=filenames[1], delimiter=',')
@@ -137,8 +133,8 @@ where the maxima are a bit less regular, but the minima are consistently zero.
 > Use each of the files once to generate a dataset containing values averaged over all patients:
 >
 > ~~~
-> filenames = glob.glob('data/inflammation*.csv')
-> composite_data = numpy.zeros((60,40))
+> filenames = glob.glob('temperature/*.temperature.csv')
+> composite_data = numpy.zeros((69,12))
 > for f in filenames:
 >     # sum each new file's data into as it's read
 > # and then divide the composite_data by number of samples
