Add TODO note for if-else lesson

--- a/_episodes/01a.05-cond.md
+++ b/_episodes/01a.05-cond.md
@@ -18,9 +18,7 @@ keypoints:
 - "Put code whose parameters change frequently in a function, then call it with different parameter values to customize its behavior."
 ---
 
-In our last lesson, we discovered something suspicious was going on
-in our inflammation data by drawing some plots.
-How can we use Python to automatically recognize the different features we saw,
+How can we use Python to automatically recognize differences between files,
 and take a different action for each? In this lesson, we'll learn how to write code that
 runs only when certain conditions are true.
 
@@ -128,6 +126,10 @@ at least one test is true
 {: .output}
 
 ## Checking our Data
+
+TODO:
+There are no suspicious conditions in the climate data, but maybe an 
+alternative exercise would be appropriate? For example, loop through years and print if it's a record high/low, or if it's above or below average.
 
 Now that we've seen how conditionals work,
 we can use them to check for the suspicious features we saw in our inflammation data.
