Inflammation to temperature in function module

--- a/_episodes/01a.06-func.md
+++ b/_episodes/01a.06-func.md
@@ -27,7 +27,7 @@ keypoints:
 ---
 
 At this point,
-we've written code to draw some interesting features in our inflammation data,
+we've written code to analyze our climate data,
 loop over all our data files to quickly draw these plots for each of them,
 and have Python make decisions based on what it sees in our data.
 But, our code is getting pretty long and complicated;
@@ -226,7 +226,7 @@ or the next person who reads it won't be able to understand what's going on.
 ## Tidying up
 
 Now that we know how to wrap bits of code up in functions,
-we can make our inflammation analysis easier to read and easier to reuse.
+we can make our climate analysis easier to read and easier to reuse.
 First, let's make an `analyze` function that generates our plots:
 
 ~~~
@@ -256,6 +256,10 @@ def analyze(filename):
 
 and another function called `detect_problems` that checks for those systematics
 we noticed:
+
+TODO: 
+Do something else here, because nothing suspicious in climate data.
+Or alternatively, we could artificially introduce some problems into the climate data.
 
 ~~~
 def detect_problems(filename):
@@ -324,7 +328,7 @@ That looks right,
 so let's try `center` on our real data:
 
 ~~~
-data = numpy.loadtxt(fname='inflammation-01.csv', delimiter=',')
+data = numpy.loadtxt(fname='temperature/wvu.temperature.csv', delimiter=',')
 print(center(data, 0))
 ~~~
 {: .python}
@@ -462,7 +466,7 @@ In fact,
 we can pass the filename to `loadtxt` without the `fname=`:
 
 ~~~
-numpy.loadtxt('inflammation-01.csv', delimiter=',')
+numpy.loadtxt('temperature/wvu.temperature.csv', delimiter=',')
 ~~~
 {: .python}
 
@@ -480,7 +484,7 @@ array([[ 0.,  0.,  1., ...,  3.,  0.,  0.],
 but we still need to say `delimiter=`:
 
 ~~~
-numpy.loadtxt('inflammation-01.csv', ',')
+numpy.loadtxt('temperature/wvu.temperature.csv', ',')
 ~~~
 {: .python}
 
@@ -488,7 +492,7 @@ numpy.loadtxt('inflammation-01.csv', ',')
 ---------------------------------------------------------------------------
 TypeError                                 Traceback (most recent call last)
 <ipython-input-26-e3bc6cf4fd6a> in <module>()
-----> 1 numpy.loadtxt('inflammation-01.csv', ',')
+----> 1 numpy.loadtxt('temperature/wvu.temperature.csv', ',')
 
 /Users/gwilson/anaconda/lib/python2.7/site-packages/numpy/lib/npyio.pyc in loadtxt(fname, dtype, comments, delimiter, converters, skiprows, usecols, unpack, ndmin)
     775     try:
@@ -708,7 +712,7 @@ and eight others that do.
 If we call the function like this:
 
 ~~~
-numpy.loadtxt('inflammation-01.csv', ',')
+numpy.loadtxt('wvu.temperature.csv', ',')
 ~~~
 {: .python}
 
